[gd_scene load_steps=2 format=3 uid="uid://b8fbjxglcek22"]

[ext_resource type="Script" path="res://menus/volume_menu.gd" id="1_wn6k0"]

[node name="volume_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wn6k0")

[node name="color_rect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0745098, 0.0117647, 0.0627451, 1)

[node name="center_container" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="v_box_container" type="VBoxContainer" parent="center_container"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="master" type="HBoxContainer" parent="center_container/v_box_container"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="label" type="Label" parent="center_container/v_box_container/master"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.74902, 0.109804, 0.12549, 1)
theme_override_constants/outline_size = 32
theme_override_font_sizes/font_size = 96
text = "Master"

[node name="master_slider" type="HSlider" parent="center_container/v_box_container/master"]
custom_minimum_size = Vector2(300, 132)
layout_mode = 2
max_value = 1.0
step = 0.05

[node name="music" type="HBoxContainer" parent="center_container/v_box_container"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="label" type="Label" parent="center_container/v_box_container/music"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.74902, 0.109804, 0.12549, 1)
theme_override_constants/outline_size = 32
theme_override_font_sizes/font_size = 96
text = "Music"

[node name="music_slider" type="HSlider" parent="center_container/v_box_container/music"]
custom_minimum_size = Vector2(300, 132)
layout_mode = 2
max_value = 1.0
step = 0.05

[node name="sounds" type="HBoxContainer" parent="center_container/v_box_container"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="label" type="Label" parent="center_container/v_box_container/sounds"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.74902, 0.109804, 0.12549, 1)
theme_override_constants/outline_size = 32
theme_override_font_sizes/font_size = 96
text = "Sounds"

[node name="sounds_slider" type="HSlider" parent="center_container/v_box_container/sounds"]
custom_minimum_size = Vector2(300, 132)
layout_mode = 2
max_value = 1.0
step = 0.05

[node name="voice" type="HBoxContainer" parent="center_container/v_box_container"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="label" type="Label" parent="center_container/v_box_container/voice"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.74902, 0.109804, 0.12549, 1)
theme_override_constants/outline_size = 32
theme_override_font_sizes/font_size = 96
text = "Voice"

[node name="voice_slider" type="HSlider" parent="center_container/v_box_container/voice"]
custom_minimum_size = Vector2(300, 132)
layout_mode = 2
max_value = 1.0
step = 0.05

[node name="back_button" type="Button" parent="."]
layout_mode = 0
offset_left = 1742.0
offset_top = 32.0
offset_right = 1888.0
offset_bottom = 123.0
theme_override_colors/font_color = Color(0.74902, 0.109804, 0.12549, 1)
theme_override_constants/outline_size = 24
theme_override_font_sizes/font_size = 60
text = "Back"

[connection signal="value_changed" from="center_container/v_box_container/master/master_slider" to="." method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="center_container/v_box_container/music/music_slider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="center_container/v_box_container/sounds/sounds_slider" to="." method="_on_sounds_slider_value_changed"]
[connection signal="value_changed" from="center_container/v_box_container/voice/voice_slider" to="." method="_on_voice_slider_value_changed"]
[connection signal="pressed" from="back_button" to="." method="_on_back_button_pressed"]
